--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	/* min-height: 100vh; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.main-holder {
+	/* min-height: 1200px; */
+	/* position: absolute;
+	top: 10px;
+	left: 0;
+	bottom:10px;
+	right: 0;
+	overflow: auto; */
+}
+
+.chatbox {
+	flex: 1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom:0;
+	right: 0;
+}
+
+.chat-input-holder {
+	/* width: 100%; */
+	display: flex;
+	padding: 12px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.chat-input {
+	width: 100%;
+	margin-left: 20px;
+	margin-right: 20px;
+	box-sizing: border-box;
+	resize: none;
+	padding: 25px;
+	outline: none;
+	font-size: 1rem;
+	line-height: 1.5rem;
+	border: none;
+	border-radius: 5px;
+	/* box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5); */
+	box-shadow: 1px 5px 10px 0px rgba(0, 0, 0, 0.2);
+	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Open Sans", "Helvetica Neue",
+		sans-serif;
+}
+
+.chat-input-btn {
+	width: 120px;
+	height: 40px;
+	/* margin-right: 130px; */
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	border-radius: 0.375rem;
+	cursor: pointer;
+	border: 1px solid #0063cc;
+	background-color: #0063cc;
+	color: #fff;
+	font-weight: bold;
+}
+.chat-input-btn:hover {
+	background-color: rgba(0, 0, 0, 0.9);
+	transition: all 0.25s ease;
+	/* background-color: rgba(255, 255, 255, 0.1); */
+}
+
+.chat-input-send-icon {
+	margin-right: 10px;
 }
